ok tranfer data entry components brothers

--- a/Front/src/app/landing/pages/page3/page3.component.html
+++ b/Front/src/app/landing/pages/page3/page3.component.html
@@ -53,7 +53,7 @@
         <!--Grid column-->
         <div class="col-md-6 col-xl-5  mt-5">
 
-          <div [ngSwitch]="valuex">
+          <div [ngSwitch]="value">
           <!--Card-->
           <app-calc-hipoteca    *ngSwitchCase="0"></app-calc-hipoteca>
           <app-card     *ngSwitchCase="1"></app-card>
