--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -53,7 +53,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a (click)="calc(2)"
+          <a (click)="dataService.viewLogin()"
             class="nav-link border border-light rounded" target="_blank">
             <i class="fas fa-sign-in-alt"></i>INGRESAR
           </a>
