add whatapp button in invierte component

--- a/Front/src/app/landing/pages/page5/page5.component.html
+++ b/Front/src/app/landing/pages/page5/page5.component.html
@@ -42,8 +42,9 @@
 
           <p class="lead mb0">Invierte Desde<strong>$500.000 hasta $100.000.000</strong></p>
           <span>(Garantizamos tu dinero )</span>
-
-
+          <hr>
+          <a href="https://api.whatsapp.com/send?phone=3174237229"><strong>Contactanos Por  </strong>  <i  class="fab fa-whatsapp fa-2x"></i>
+          <span>    O Llena El Formulario</span></a>
           <!-- <div>
             <hr>
             <p>Ya Tienes Cuenta?</p>
