--- a/Front/src/app/shared/register/register.component.html
+++ b/Front/src/app/shared/register/register.component.html
@@ -5,14 +5,14 @@
   <div class="card-body ">
 
     <!-- Form -->
-    <form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="register()" class="text-white text-center">
+    <form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="register()" class=" text-white text-center">
       <h1>Crear Cuenta</h1>
 
       <p>Nombre:</p>
-        <input type="text" formControlName="name" placeholder="Ingrese su primer nombre">
+        <input  type="text" formControlName="name" placeholder="Primer nombre">
 <hr>
       <p>Apellido: </p>
-        <input type="text" formControlName="surname" placeholder="Ingrese su primer apellido">
+        <input type="text" formControlName="surname" placeholder="Primer apellido">
         <hr>
       <p>Email: </p>
         <input type="email" formControlName="email" placeholder="Ingrese su email">
