--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -1,52 +1,103 @@
 <div class="navbar-container">
-  <!-- Navbar -->
-  <mat-toolbar class="navbar" color="primary">
-    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-    <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home"><h1>Lendiup</h1></a>
-    <span class="navbar-spacer"></span>
-    <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
+    <!-- Navbar -->
+    <mat-toolbar class="navbar" color="primary">
+        <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+        <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
+            <h1>Lendiup</h1>
+        </a>
+        <span class="navbar-spacer"></span>
+        <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
       <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
     </button>
-    <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
-      <a mat-menu-item><span>Tienes una nueva factura</span></a>
-    </mat-menu>
-    <button mat-button [matMenuTriggerFor]="userMenu">
+        <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
+            <a mat-menu-item><span>Tienes una nueva factura</span></a>
+        </mat-menu>
+        <button mat-button [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
       <span fxShow fxHide.xs>
         <!-- {{userName}} -->
       </span>
     </button>
-    <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
-      <a mat-menu-item [routerLink]="['/dashboard/misdatos']"><mat-icon>person</mat-icon><span>Mi Cuenta</span></a>
-      <a mat-menu-item (click)="logout()" [routerLink]="['/auth/login']"><mat-icon>exit_to_app</mat-icon><span>Salir</span></a>
-    </mat-menu>
-  </mat-toolbar>
+        <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
+            <a mat-menu-item [routerLink]="['/dashboard/misdatos']">
+                <mat-icon>person</mat-icon><span>Mi Cuenta</span>
+            </a>
+            <a mat-menu-item (click)="logout()" [routerLink]="['/auth/login']">
+                <mat-icon>exit_to_app</mat-icon><span>Salir</span>
+            </a>
+        </mat-menu>
+    </mat-toolbar>
 
-  <!-- Side nav -->
-  <mat-sidenav-container class="navbar-sidenav-container">
-    <mat-sidenav #snav  [mode]="!isSmallScreen ? 'side' : 'over'"  [(opened)]="opened" fixedTopGap="56" class="sidenav aa app-view">
-      <mat-nav-list>
-        <h3 mat-subheader class="aa">Menu</h3>
-        <a mat-list-item [routerLink]="[menuItem.path]" routerLinkActive="active" *ngFor="let menuItem of menuItems"
-          class="{{menuItem.class}} aa">
-          <mat-icon mat-list-icon>{{menuItem.icon}}</mat-icon>
-          <p mat-line> {{menuItem.title}} </p>
-        </a>
-        <mat-divider></mat-divider>
-        <h3 mat-subheader class="aa">Nosotros</h3>
-        <a class="about" mat-list-item routerLinkActive="active" [routerLink]="['/dashboard/about']">
-          <mat-icon mat-list-icon class="aa">info_outline</mat-icon>
-          <p mat-line > Acerca De Nosotros{{y}} </p>
-        </a>
-        <a mat-list-item routerLinkActive="active" class="xfijo" (click)="logout()">
-          <i class="fas fa-sign-out-alt"></i>
-          <p mat-line >SALIR</p>
-        </a>
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <router-outlet></router-outlet>
-      <app-footer></app-footer>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+    <!-- Side nav -->
+    <mat-sidenav-container class="navbar-sidenav-container">
+        <mat-sidenav #snav [mode]="!isSmallScreen ? 'side' : 'over'" [(opened)]="opened" fixedTopGap="56" class="sidenav aa app-view">
+            <mat-nav-list>
+                <h3 mat-subheader class="aa">Menu</h3>
+                <mat-list>
+                    <mat-list-item *ngIf="admin" routerLinkActive="active" routerLink="/dashboard/solicitud" class="x aa">
+                        <mat-icon mat-list-icon>space_dashboard</mat-icon>
+                        <p mat-line> Solicitud </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/solicitudes" class="x aa">
+                        <mat-icon mat-list-icon>space_dashboard</mat-icon>
+                        <p mat-line> Solicitudes </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/productos" class="x aa">
+                        <mat-icon mat-list-icon>space_dashboard</mat-icon>
+                        <p mat-line> Productos </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosinmueble" class="x aa">
+                        <mat-icon mat-list-icon>verified</mat-icon>
+                        <p mat-line> Datos Inmueble </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datospersonales" class="x aa">
+                        <mat-icon mat-list-icon>verified</mat-icon>
+                        <p mat-line> Datos Personales </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosvehiculo" class="x aa">
+                        <mat-icon mat-list-icon>verified</mat-icon>
+                        <p mat-line> Datos Vehiculo </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosconstruccion" class="x aa">
+                        <mat-icon mat-list-icon>verified</mat-icon>
+                        <p mat-line> Datos Construccion </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/usuarios" class="x aa">
+                        <mat-icon mat-list-icon>groups</mat-icon>
+                        <p mat-line> Usuarios </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/estadocuenta" class="x aa">
+                        <mat-icon mat-list-icon>savings</mat-icon>
+                        <p mat-line> Pagar Cuota </p>
+                    </mat-list-item>
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/misdatos" class="x aa">
+                        <mat-icon mat-list-icon>person</mat-icon>
+                        <p mat-line> Mi Cuenta </p>
+                    </mat-list-item>
+                    <!-- Forma usando lista en el TS pero no presenta conflictos con *ngIf -->
+                    <!-- <mat-list-item routerLinkActive="active" *ngFor="let menuItem of menuItems" [routerLink]="[menuItem.path]" class="{{menuItem.class}} aa">
+                        <mat-icon mat-list-icon>{{menuItem.icon}}</mat-icon>
+                        <p mat-line> {{menuItem.title}} </p>
+                    </mat-list-item>-->
+                </mat-list>
+                <mat-divider></mat-divider>
+
+                <h3 mat-subheader class="aa">Nosotros</h3>
+                <a class="about" mat-list-item routerLinkActive="active" [routerLink]="['/dashboard/about']">
+                    <mat-icon mat-list-icon class="aa">info_outline</mat-icon>
+                    <p mat-line> Acerca De Nosotros</p>
+                </a>
+                <a mat-list-item routerLinkActive="active" class="xfijo" (click)="logout()">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <p mat-line>SALIR</p>
+                </a>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            <router-outlet></router-outlet>
+            <app-footer></app-footer>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </div>
