--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -36,35 +36,35 @@
             <mat-nav-list>
                 <h3 mat-subheader class="aa">Menu</h3>
                 <mat-list>
-                    <mat-list-item *ngIf="admin" routerLinkActive="active" routerLink="/dashboard/solicitud" class="x aa">
+                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/solicitud" class="x aa">
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Solicitud </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/solicitudes" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/solicitudes" class="x aa">
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Solicitudes </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/productos" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/productos" class="x aa">
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Productos </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosinmueble" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/datosinmueble" class="x aa">
                         <mat-icon mat-list-icon>verified</mat-icon>
                         <p mat-line> Datos Inmueble </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datospersonales" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/datospersonales" class="x aa">
                         <mat-icon mat-list-icon>verified</mat-icon>
                         <p mat-line> Datos Personales </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosvehiculo" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/datosvehiculo" class="x aa">
                         <mat-icon mat-list-icon>verified</mat-icon>
                         <p mat-line> Datos Vehiculo </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/datosconstruccion" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/datosconstruccion" class="x aa">
                         <mat-icon mat-list-icon>verified</mat-icon>
                         <p mat-line> Datos Construccion </p>
                     </mat-list-item>
-                    <mat-list-item routerLinkActive="active" routerLink="/dashboard/usuarios" class="x aa">
+                    <mat-list-item *ngIf="this.rolesUsuario.indexOf('admin') != -1" routerLinkActive="active" routerLink="/dashboard/usuarios" class="x aa">
                         <mat-icon mat-list-icon>groups</mat-icon>
                         <p mat-line> Usuarios </p>
                     </mat-list-item>
