--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
         <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-        <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
+        <a class="navbar-brand" (click)="snav.toggle()" matTooltip="Home">
             <h1>Lendiup</h1>
         </a>
         <span class="navbar-spacer"></span>
