--- a/Front/src/app/dashboard/usuarios/usuarios.component.scss
+++ b/Front/src/app/dashboard/usuarios/usuarios.component.scss
@@ -1,7 +1,11 @@
-td  {
-  width:100%;
-  height: 20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: pre;
+td {
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: pre;
+}
+
+.aa {
+    width: 200px;
 }
