--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.html
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.html
@@ -81,9 +81,11 @@
 <!-- <h3>Formulario:</h3>
 <pre>Valid:{{formularioSolicitud.valid}}</pre>
 <pre>{{tasa}}</pre>
-<pre>{{formularioSolicitud.value | json}}</pre>
-<pre>{{this.regInmueble}}</pre>
-<pre>{{this.regPersonales}}</pre>
-<pre>{{this.regVehiculo}}</pre>
-<pre>{{this.regTrabajo}}</pre>
-<pre>{{this.regReferencias}}</pre> -->
+<pre>{{formularioSolicitud.value | json}}</pre> -->
+
+
+<pre class="noS">{{this.regInmueble}}</pre>
+<pre class="noS">{{this.regPersonales}}</pre>
+<pre class="noS">{{this.regVehiculo}}</pre>
+<pre class="noS">{{this.regTrabajo}}</pre>
+<pre class="noS">{{this.regReferencias}}</pre>
