fix router miSolicitud

--- a/Front/src/app/dashboard/datosreferencias/datosreferencias.component.html
+++ b/Front/src/app/dashboard/datosreferencias/datosreferencias.component.html
@@ -1,6 +1,6 @@
 <div class="panel-header ">
   <div class="header text-center">
-      <h2 class="title">Formulario De Inmueble</h2>
+      <h2 class="title">Formulario De Referencias</h2>
   </div>
 </div>
 
