--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.html
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.html
@@ -36,7 +36,7 @@
                         <button *ngIf="request.regVehiculo == false && regVehiculo" routerLink="/dashboard/datosvehiculo" class="button3">Datos Del Vehiculo</button>
                         <button *ngIf="regInmueble" routerLink="/dashboard/datosconstruccion" class="button3">Datos Construccion</button>
                         <button *ngIf="request.regTrabajo == false && regTrabajo" routerLink="/dashboard/datostrabajo" class="button3">Datos De Trabajo</button>
-                        <button *ngIf="request.regReferencias == false && regReferencias" routerLink="/dashboard/datostrabajo" class="button3">Referencias</button>
+                        <button *ngIf="request.regReferencias == false && regReferencias" routerLink="/dashboard/datosreferencias" class="button3">Referencias</button>
                         <hr>
                         <p>Imagen O PDF De Las 2 Caras De Tu Cedula </p>
                         <input type="file" class="file-upload" multiple>
